--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "~0.8.5",
     "express": "~4.9.0",
     "fast.js": "^0.1.1",
+    "jade": "^1.11.0",
     "kew": "^0.5.0-alpha.1",
     "level": "^0.18.0",
     "morgan": "~1.3.0",
@@ -29,5 +30,11 @@
   },
   "bugs": {
     "url": "https://github.com/volumio/Volumio2/issues"
+  },
+  "devDependencies": {
+    "bower": "^1.4.1",
+    "gulp": "^3.9.0",
+    "gulp-less": "^3.0.3",
+    "gulp-watch": "^4.2.4"
   }
 }
